# Poem

./: Cargo.toml  records.db
src/: main.rs
src/core/: cli.rs  clipboard.rs  config.rs  database.rs  mod.rs  store.rs  tcp_manager.rs
src/utils/: file_path_utils.rs  mod.rs  string_util.rs
