[package]
name = "poem"
version = "1.0.0"
edition = "2021"
authors = ["三木 <mumu.918@qq.com>"]

[dependencies]
arboard = "3.3.0"
chrono = { version = "0.4.33" }
clap = { version = "4.4.18", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "5.0.1"
md5 = "0.7.0"
once_cell = "1.19.0"
rusqlite = "0.30.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "io-util",
] }
toml = "0.8.8"
unicode-width = "0.1.11"
